WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
263895
REGRESSION(
267643@main
): wpt /css/css-properties-values-api/var-reference-registered-properties.html
https://bugs.webkit.org/show_bug.cgi?id=263895
Summary
REGRESSION(267643@main): wpt /css/css-properties-values-api/var-reference-reg...
Sam Sneddon [:gsnedders]
Reported
2023-10-30 09:35:06 PDT
See
https://wpt.fyi/results/css/css-properties-values-api/var-reference-registered-properties.html?run_id=5133309367025664&run_id=5150860515999744
, subtest "Empty universal custom property can be substituted with var()" has regressed. Bisecting points at
267643@main
.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-10-30 09:35:16 PDT
<
rdar://problem/117690684
>
Antti Koivisto
Comment 2
2023-11-01 06:08:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19833
EWS
Comment 3
2023-11-01 07:56:25 PDT
Committed
270053@main
(48bfdb7832dc): <
https://commits.webkit.org/270053@main
> Reviewed commits have been landed. Closing PR #19833 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug