REGRESSION(267643@main): wpt /css/css-properties-values-api/var-reference-registered-properties.html https://bugs.webkit.org/show_bug.cgi?id=263895 rdar://117690684

Reviewed by Alan Baradlay.

* LayoutTests/imported/w3c/web-platform-tests/css/css-properties-values-api/var-reference-registered-properties-expected.txt:
* Source/WebCore/css/CSSCustomPropertyValue.cpp:
(WebCore::CSSCustomPropertyValue::createEmpty):

Remove use of std::monostate as a way to indicate empty custom property value. Use a shared empty CSSVariableData instance instead.
This way we don't need special handling for the empty case.

(WebCore::CSSCustomPropertyValue::equals const):
(WebCore::CSSCustomPropertyValue::customCSSText const):
(WebCore::CSSCustomPropertyValue::tokens const):
* Source/WebCore/css/CSSCustomPropertyValue.h:

Canonical link: https://commits.webkit.org/270053@main